--- a/main.css
+++ b/main.css
@@ -60,7 +60,7 @@ section .container{
 }
 
 section {
-    padding: 24px 0;
+    padding: 40px 0;
 }
 
 section h2 {
@@ -139,4 +139,8 @@ footer {
     background-color: #ff8801;
     color: aliceblue;
     padding: 16px 0;
+}
+
+.container h2{
+    padding: 15px;
 }
